--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "express": "^4.17.3",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "pg": "^8.7.3",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.45",
     "uuid": "^8.3.2",
     "youch": "^3.1.1",
     "yup": "^0.32.11"
